k8s-rpi-apps-ingresses/grafana-ingress/grafana-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: grafana
  annotations:
    kubernetes.io/ingress.class: traefik  
    avp.kubernetes.io/path: "k8secrets/ingresses"    
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`<grafanahostname>.<domainname>`)
    kind: Rule
    services:
    - name: grafana
      port: 80
